# acidentes-rodovias-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: processamento_dados.ipynb
pipeline/: __init__.py  config.py  extractors.py  loaders.py  orchestrator.py  transformers.py
tests/: test_pipeline.py
